# all-ThreadPenalty

./: .gitignore  .travis.yml  README.md  build.gradle  gradle.properties  make-backup.csh  private_key.pepk  release.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: appJniMethods.hpp  common.hpp  cppcode.cpp  plogLevels.h  plogTester.cpp  threadPenalty.cpp
app/src/main/cpp/plog/: plog.cpp  plog.h  plog.hpp
app/src/main/cpp/plogs/: plogCollection.hpp  plogfile.cpp  plogfile.hpp  plognone.hpp  plogs.cpp  plogsys.hpp
app/src/main/res/layout/: activity_main.xml  (+5 more)
app/src/main/res/layout-land/: crash_dlg.xml  frag_bottom_nav_one.xml
gradle/wrapper/: gradle-wrapper.properties
info/: all-thread-penalty.jks  deployment_cert.der  private_key.pepk  upload_cert.der
release/: all-ThreadPenalty-release-3.06.27.apk  all-ThreadPenalty-release-3.06.30.apk  all-ThreadPenalty-release-3.07.01.apk  app-release.aab
screenshots/: logo.xcf
threadPenalty/: build.gradle
threadPenalty/release/: all-ThreadPenalty-release-3.07.01.aab  all-ThreadPenalty-release-3.07.31.aab  all-threadPenalty-release-2.10.20.apk  output-metadata.json
threadPenalty/src/main/: AndroidManifest.xml
threadPenalty/src/main/cpp/: CMakeLists.txt  appJniMethods.hpp  common.hpp  cppcode.cpp  plogJavaBridge.cpp  plogLevels.h  plogTester.cpp  threadPenalty.cpp
threadPenalty/src/main/cpp/plog/: plog.cpp  plog.h  plog.hpp
threadPenalty/src/main/cpp/plogs/: plogCollection.hpp  plogfile.cpp  plogfile.hpp  plognone.hpp  plogs.cpp  plogs.hpp  plogsys.hpp
(+44 files in other folders)
